tdf#161189 - CopyFromClip: improve handling of deleting notes

Instead of adding additional deletion flags, just remove the note deletetion flag when needed.

Change-Id: Iba0dd4f922694c9fff98f4b74bccad1b8ee16d49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170803
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>